[package]
name = "chidori-debugger"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Visual debugger for Chidori"

[dependencies]
objc = "0.2"
winit = "=0.29.15"
bevy = "0.13.2"
egui = { version = "0.28.1", default-features = false, features = ["bytemuck"] }
image = { version = "0.24", features = ["jpeg", "png"] }
bevy_utils = "0.13.2"
bevy_rapier2d = { version = "*", features = [ "simd-stable", "debug-render-2d" ]}
bevy_prototype_lyon = "0.11.0"
egui_extras = { version = "0.28.1" , features = ["syntect", "all_loaders"]}
egui_tiles = "0.9.1"
bevy_cosmic_edit = { version = "0.19.0", features = ["multicam"] }
rfd = "0.14.1"
bytemuck = "1.15.0"
rand = "0.8.5"
petgraph-gen = "0.1.3"
num = "0.4.0"
tinyset = "0.4.10"
egui_json_tree = "0.6.0"

dashmap = "5.5.3"
anyhow.workspace = true
serde.workspace = true
serde_json = "=1.0.128"
uuid.workspace = true
serde_derive.workspace = true
tokio.workspace = true
futures.workspace = true
petgraph.workspace = true

syntect = "5.2.0"
chidori-core = { path = "../chidori-core", version = "0.2.1"   }
dirs = "5.0.1"
target-lexicon = "0.12.14"
rusqlite.workspace = true
notify-debouncer-full = "0.3.1"
once_cell = "1.19.0"
crossbeam-channel = "0.5.12"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
webbrowser = { version = "0.8.2", optional = true }
serde_yaml = "0.8.26"
regex = "1.10.4"
bevy_framepace = "0.17.1"

[target.'cfg(not(any(target_arch = "wasm32", target_os = "android")))'.dependencies]
arboard = { version = "3.2.0", optional = true }
thread_local = { version = "1.1.0", optional = true }

[build-dependencies]
target-lexicon = "0.12"
dirs = "3.0"
pyo3-build-config = "0.19.1"


# https://github.com/mvlabat/bevy_egui/blob/main/Cargo.toml
[features]
default = ["manage_clipboard", "open_url", "default_fonts", "render"]
manage_clipboard = ["arboard", "thread_local"]
open_url = ["webbrowser"]
default_fonts = ["egui/default_fonts"]
render = ["bevy/bevy_render"]