[package]
name = "chidori-prompt-format"
version = "0.1.35"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.89", features = [] }
serde-wasm-bindgen = "0.4"
indoc.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json = "=1.0.115"
serde_yaml = "0.9"
thousand_birds_handlebars = "5.0.0"


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
lazy_static = "1.4.0"

#[dependencies.handlebars]
#git = "https://github.com/ThousandBirdsInc/handlebars-rust"
#rev = "fc73bb228665d27e476c5ea8c270fea79b2290cf"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
