[package]
name = "chidori"
version = "0.1.7"
edition = "2021"
description = "A Rust library for executing prompt-graph models"
license = "MIT"
homepage = "https://docs.thousandbirds.ai"
repository = "https://github.com/ThousandBirdsInc/chidori"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "chidori"
crate-type = ["cdylib", "lib"]
bench = false

[features]
python = [
    "dep:pyo3",
    "dep:pyo3-asyncio",
    "dep:pyo3-log",
]
nodejs = [
    "dep:neon"
]


# https://chat.openai.com/c/52edc960-dc19-4df7-b36f-30caad9c1905
[dependencies]
protobuf = "3.2.0"
sqlparser = "0.34.0"
# we do not enable wasm-bindgen serde-serialize because it causes this issue https://github.com/rustwasm/wasm-bindgen/pull/3031
# serde-wasm-bindgen should be used instead

# Vendor protoc and openssl so we don't need to separately install them
openssl = { version = "0.10", features = ["vendored"] }

once_cell = "1"
prompt-graph-core = { path = "../prompt-graph-core", version = "0.1.0" }
wasm-bindgen = {version = "0.2.86", features = []}
handlebars = "4.3.7"
anyhow = { version = "1.0", default-features = false }
indoc = "1.0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0.96"
tonic = "0.9"
prost = "0.11"
tokio = { version = "1", features = ["full"] }
env_logger = "0.10.0"
log = "0.4.16"
futures = "0.3.15"

# Optional unless the python feature is enabled
pyo3 = { version = "0.18.3", features = ["extension-module", "abi3-py37"], optional = true }
pyo3-asyncio = { version = "0.18", features = ["attributes", "tokio-runtime"], optional = true  }
pyo3-log = { version = "0.8.2", optional = true }

neon-serde3 = "0.10.0"


[dependencies.prompt-graph-exec]
path = "../prompt-graph-exec"
version = "0.1.0"
default-features = false

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-6", "channel-api", "promise-api", "try-catch-api"]
optional = true

[dev-dependencies]
wasm-bindgen-test = "0.2"

[build-dependencies]
tonic-build = "0.9.2"
pyo3-build-config = "0.19.1"


[package.metadata.maturin]
python-source = "package_python"
name = "chidori"