[package]
name = "chidori"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "A Rust library for executing prompt-graph models"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_chidori"
crate-type = ["cdylib", "lib"]
bench = false

[features]
python = [
    "dep:pyo3",
    "dep:pyo3-asyncio",
    "dep:pyo3-log",
]
nodejs = [
    "dep:neon"
]


# https://chat.openai.com/c/52edc960-dc19-4df7-b36f-30caad9c1905
[dependencies]
protobuf.workspace = true
sqlparser.workspace = true
# we do not enable wasm-bindgen serde-serialize because it causes this issue https://github.com/rustwasm/wasm-bindgen/pull/3031
# serde-wasm-bindgen should be used instead

# Vendor protoc and openssl so we don't need to separately install them
openssl = { version = "0.10.55", features = ["vendored"] }

once_cell = "1"
prompt-graph-core = { path = "../chidori-core", version = "^0.1.28" }
wasm-bindgen = {version = "0.2.86", features = []}
anyhow.workspace = true
indoc.workspace = true
serde.workspace = true
serde-wasm-bindgen = "0.4"
serde_json.workspace = true
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
env_logger.workspace = true
log.workspace = true
futures.workspace = true

# Optional unless the python feature is enabled
pyo3 = { version = "0.18.3", features = ["extension-module", "abi3-py37"], optional = true }
pyo3-asyncio = { version = "0.18", features = ["attributes", "tokio-runtime"], optional = true  }
pyo3-log = { version = "0.8.2", optional = true }

neon-serde3 = "0.10.0"


[dependencies.prompt-graph-exec]
path = "../prompt-graph-exec"
version = "0.1.0"
default-features = false

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-6", "channel-api", "promise-api", "try-catch-api"]
optional = true

[dev-dependencies]
wasm-bindgen-test = "0.2"

[build-dependencies]
tonic-build = "0.9.2"
pyo3-build-config = "0.19.1"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true


