[package]
name = "prompt-graph-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Core of Chidori, compiles graph and node definitions into an interpretable graph"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "prompt_graph_core"
crate-type = ["cdylib", "lib"]
bench = false

[features]
python = []
nodejs = []
build-protos = []


# https://chat.openai.com/c/52edc960-dc19-4df7-b36f-30caad9c1905
[dependencies]
gluesql.workspace = true
protobuf.workspace = true
sqlparser.workspace = true
anyhow.workspace = true
indoc.workspace = true
serde.workspace = true
serde_json.workspace = true
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
env_logger.workspace = true
log.workspace = true
futures.workspace = true

im = "15.1.0"
num_cpus = "1"
petgraph = "0.6.3"
typescript-type-def = "0.5.7"
serde_yaml = "0.9.25"
handlebars = "4.3.7"

[build-dependencies]
tonic-build = "0.9.2"
