[package]
name = "prompt-graph-exec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "prompt_graph_exec"
crate-type = ["cdylib", "lib"]
bench = false

[features]
nodejs = []
starlark = ["dep:starlark"]
parquet = ["dep:parquet", "dep:arrow"]
default = []

[dependencies]
protobuf = "3.2.0"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.2"
prompt-graph-core = { path = "../prompt-graph-core", version = "0.1.0" }
openai-api-rs = "0.1.10"
twox-hash = "1.6.3"
# gluesql = "0.14.0"

# Parquet feature must be enabled
arrow = { version = "42.0.0", optional = true}
parquet = { version = "42.0.0", optional = true}

zip = "0.6.6"
qdrant-client = "1.3.0"
base64 = "0.21.2"
hnsw_rs = { git = "https://github.com/ThousandBirdsInc/hnswlib-rs.git", rev = "59051b2c54fa8175faf08930d4b93103d50b9ca4"}

anyhow = { version = "1.0", default-features = false }

# TODO: make this an optional feature
deno_core = "0.192.0"

# Starlark option must be enabled
starlark = { version = "0.9.0", optional = true}

futures-util = "0.3.28"

reqwest = { version = "0.11.18", features = ["json", "stream"]}
bytes = "1.0.1"
indoc = "1.0.3"
tonic = "0.9"
prost = "0.11"
futures-core = "0.3"
tokio-stream = "0.1"
ulid = "1.0.0"
env_logger = "0.10.0"
log = "0.4.16"

async-stream = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"

dashmap = "5.4.0"
sled = "0.34.7"

futures = "0.3.15"
bincode = "2.0.0-rc.3"
lazy_static = "1.4.0"

[build-dependencies]
tonic-build = "0.9.2"


[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-6", "channel-api", "promise-api", "try-catch-api"]
