[package]
name = "prompt-graph-exec"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Execution of Chidori, interprets a given graph of prompts and nodes, provides grpc api to the runtime"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "prompt_graph_exec"
crate-type = ["cdylib", "lib"]
bench = false

[features]
nodejs = []
starlark = ["dep:starlark"]
parquet = [
#    "dep:parquet", "dep:arrow"
]
qdrant = []
default = []

[dependencies]
prompt-graph-core = { path = "../prompt-graph-core", version = "0.1.28" }
protobuf.workspace = true
tokio.workspace = true
openai-api-rs = "0.1.11"
twox-hash = "1.6.3"

# Parquet feature must be enabled
#arrow = { version = "42.0.0", optional = true}
#parquet = { version = "42.0.0", optional = true}

zip = "0.6.6"
qdrant-client = "1.3.0"
base64 = "0.21.2"
hnsw_rs_thousand_birds = "0.1.20"

anyhow.workspace = true

# TODO: make this an optional feature
deno_core = "0.192.0"

# Starlark option must be enabled
starlark = { version = "0.9.0", optional = true}
http-body-util = "0.1.0-rc.2"

futures-util = "0.3.28"

reqwest.workspace = true
bytes.workspace = true
indoc.workspace = true
tonic.workspace = true
prost.workspace = true
futures-core.workspace = true
tokio-stream.workspace = true
ulid.workspace = true
env_logger.workspace = true
log.workspace = true

async-stream = "0.3.5"
serde.workspace = true
serde_json.workspace = true
rand = "0.8.5"

dashmap.workspace = true
sled = "0.34.7"

futures.workspace = true
bincode.workspace = true
lazy_static = "1.4.0"

tokio-cron-scheduler = "0.9.4"

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-log.workspace = true
tracing-chrome.workspace = true
tracing-flame.workspace = true

[build-dependencies]
tonic-build = "0.9.2"


[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-6", "channel-api", "promise-api", "try-catch-api"]