[package]
name = "prompt-graph-ui"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "UI for Chidori, provides visualization of runtime behavior"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.22.0", features = ["all-widgets"]}
crossterm = { version = "0.26"}
tui-input = "0.7.1"
tonic = "0.9"
prost = "0.11"
tokio = { version = "1", features = ["full"] }
prompt-graph-core = { path = "../prompt-graph-core", version = "^0.1.24" }
anyhow = { version = "1.0", default-features = false }
futures = "0.3.15"
