[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }
target-lexicon = "0.12"
dirs = "3.0"
pyo3-build-config = "0.19.1"

[dependencies]
tauri = { version = "1.6.1", features = [ "dialog-open", "fs-all"] }
serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true
tokio.workspace = true
chidori-core = { path = "../../chidori-core" }
dirs = "5.0.1"
target-lexicon = "0.12.14"
petgraph.workspace = true
rusqlite = { version = "0.29.0", features = ["bundled"] }
notify-debouncer-full = "0.3.1"
ts-rs = "7.1"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
