[tool.poetry]
name = "langchain-comparison"
version = "0.1.0"
description = ""
authors = ["Colton Pierson <colton@thousandbirds.ai>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
aiohttp = "^3.7.4"
chidori = { file = "../../../chidori/dist/chidori-0.1.26-cp37-abi3-macosx_11_0_arm64.whl" }
streamlit = "1.25.0"
pydantic = "1.10.12"
langchain = "0.0.264"
openai = "^0.27.8"
tiktoken = "^0.4.0"
faiss-cpu = "^1.7.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
