[tool.poetry]
name = "top-ai-launches-hn"
version = "0.1.0"
description = ""
authors = ["Colton Pierson <colton@thousandbirds.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
chidori = "^0.1.24"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
