[package]
name = "top-ai-launches-hn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chidori = { path = "../../../chidori", version = "^0.1.23" }
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1.0", default-features = false }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
serde_json = "1.0.96"
lettre = "0.10.0-beta.3"
